GRADLE-635, GRADLE-555, GRADLE-554 - Renamed compile task to compileJar for each source set - For each source set, add a compile task which dependsOn compile$Lang - Merged dists and libs into assemble task - Moved check task to Java plugin

--- a/src/samples/java/multiproject/api/build.gradle
+++ b/src/samples/java/multiproject/api/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 // END SNIPPET project-dependencies
 
 // Just a smoke test that using this option does not lead to any exception
-compile.options.compilerArgs = [[value: '-Xlint:unchecked']]
+compileJava.options.compilerArgs = [[value: '-Xlint:unchecked']]
 
 task spiJar(type: Jar) {
     appendix = 'spi'
