--- a/src/samples/userguide/tutorial/pluginIntro/build.gradle
+++ b/src/samples/userguide/tutorial/pluginIntro/build.gradle
@@ -1,5 +1,5 @@
-usePlugin('java')
+usePlugin 'java'
 
-task check << {
-    println(compile.destinationDir.name)
+task show << {
+    println relativePath(compileJava.destinationDir)
 }
