--- a/subprojects/gradle-wrapper/build.gradle
+++ b/subprojects/gradle-wrapper/build.gradle
@@ -1,3 +1,14 @@
-usePlugin 'java'
+usePlugin 'groovy'
+
+dependencies {
+    groovy libraries.groovy_depends
+    testCompile files(project( ':gradle-core' ).dependencyProject.source.test.classesDir),
+            project(':gradle-core')
+}
+
+//Our tests use some base classes from gradle-core. Currently, we must explicitly state that we
+//depend on its compileTests and add its output to our classpath.
+compileTest.dependsOn project( ':gradle-core' ).compileTestGroovy
+
 
 manifest.mainAttributes("Main-Class": 'org.gradle.wrapper.WrapperMain')
