Potential fix for broken int test on teamcity

--- a/src/samples/userguide/multiproject/dependencies/java/build.gradle
+++ b/src/samples/userguide/multiproject/dependencies/java/build.gradle
@@ -1,4 +1,7 @@
 subprojects {
+    repositories {
+        mavenCentral()
+    }
     usePlugin('java')
     group = 'org.gradle.sample'
     version = '1.0'
