--- a/subprojects/gradle-core/src/test/resources/org/gradle/integtests/testProjects/projectWithUnknownDependency.gradle
+++ b/subprojects/gradle-core/src/test/resources/org/gradle/integtests/testProjects/projectWithUnknownDependency.gradle
@@ -2,8 +2,8 @@ configurations {
     compile
 }
 dependencies {
-    compile 'test:projectA:1.2'
-    compile 'test:projectB:2.1.5'
+    compile 'test:unknownProjectA:1.2'
+    compile 'test:unknownProjectB:2.1.5'
 }
 
 defaultTasks 'listJars'
