--- a/subprojects/gradle-core/build.gradle
+++ b/subprojects/gradle-core/build.gradle
@@ -2,6 +2,13 @@ import java.text.DateFormat
 
 usePlugin 'groovy'
 
+configurations {
+    testFixtures
+    testFixturesRuntime {
+        extendsFrom testFixtures, testRuntime
+    }
+}
+
 dependencies {
     groovy libraries.groovy_depends
 
@@ -29,6 +36,7 @@ dependencies {
 
     compile "net.sf.jopt-simple:jopt-simple:2.4.1@jar",
             libraries.ant,
+            "org.apache.ant:ant-nodeps:1.7.0@jar",
             "ch.qos.logback:logback-classic:0.9.9@jar",
             "org.slf4j:slf4j-api:1.5.3@jar",
             "org.slf4j:jul-to-slf4j:1.5.3@jar",
@@ -50,12 +58,13 @@ dependencies {
 
     runtime libraries.ant_junit,
             libraries.ant_launcher,
-            "org.apache.ant:ant-nodeps:1.7.0@jar",
             "org.apache.ant:ant-trax:1.7.0@jar"
 
     def BEAN_UTILS = ["commons-beanutils:commons-beanutils-core:1.7.0@jar", "commons-collections:commons-collections:2.0@jar", "org.slf4j:jcl-over-slf4j:1.5.3@jar"]
     runtime "checkstyle:checkstyle:5.0@jar", libraries.antlr, "org.slf4j:jcl-over-slf4j:1.5.3@jar",
             "com.google.collections:google-collections:0.9@jar", BEAN_UTILS
+
+    testFixtures source.test.classes, source.main.classes
 }
 
 jar.manifest.mainAttributes("Main-Class": "org.gradle.BootstrapMain")
@@ -74,8 +83,7 @@ processResources.doLast {
 [compileGroovy, compileTestGroovy]*.groovyOptions*.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
 
 test {
-    // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
-    options.fork(forkMode: ForkMode.ONCE, jvmArgs: ["-ea", '-Xms128m', '-Xmx1100m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'])
+    options.fork(jvmArgs: ["-ea", '-Xms128m', '-Xmx1100m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'])
 
     exclude 'org/gradle/integtests/**/*IntegrationTest.*'
 }
