GRADLE-571, GRADLE-635 - Use default title for java/groovy/scala doc when none specified. - Fixed warnings from javadoc when run for mixed language project. - Fixed errors from scaladoc when run for mixed language project.

--- a/src/samples/scala/mixedJavaAndScala/build.gradle
+++ b/src/samples/scala/mixedJavaAndScala/build.gradle
@@ -1,5 +1,7 @@
 usePlugin 'scala'
 
+version = 1.0
+
 repositories {
     mavenRepo urls: 'http://scala-tools.org/repo-releases/'
     mavenCentral()
