--- a/subprojects/gradle-ui/ui.gradle
+++ b/subprojects/gradle-ui/ui.gradle
@@ -1,6 +1,6 @@
 dependencies {
-   compile project(':gradle-core')
-   compile project(':gradle-open-api')
+   compile project(':core')
+   compile project(':openApi')
 
     groovy libraries.groovy_depends
 
@@ -14,8 +14,8 @@ dependencies {
             libraries.jul_to_slf4j,
             libraries.logback_core
 
-    testCompile project(path: ':gradle-core', configuration: 'testFixtures')
-    testRuntime project(path: ':gradle-core', configuration: 'testFixturesRuntime')
+    testCompile project(path: ':core', configuration: 'testFixtures')
+    testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
 task integTest(type: Test, dependsOn: [ rootProject.intTestImage ]) {
