Switch off the pdf generation on windows again.

--- a/build.gradle
+++ b/build.gradle
@@ -519,6 +519,10 @@ task userguidePdf(dependsOn: [userguideSrc, userguideStyleSheets]) << {
     println "done"
 }
 
+[userguidePdf].each {
+    it.onlyIf { !System.getProperty("os.name").toLowerCase().contains('windows') }
+}
+
 task uploadDocs(dependsOn: docs) << {
     ftp(action: 'mkdir', remotedir: docsRemoteDir)
     ftp(action: 'delete', remotedir: docsRemoteDir) {
