- Removed javadocDir, javadocDirName, srcRoot and srcRootName convention properties - Changed webAppDirName convention property to be relative to project dir - Updated convention property sections of all plugin chapters

--- a/src/samples/groovy/multiproject/testproject/build.gradle
+++ b/src/samples/groovy/multiproject/testproject/build.gradle
@@ -19,7 +19,7 @@ compileGroovy {
 }
 
 manifest.mainAttributes(myprop: 'myvalue')
-metaInf << fileTree(dir: new File(srcRoot, 'metaInfFiles'))
+metaInf << fileTree(dir: 'src/metaInfFiles')
 
 test {
 	useJUnit().options.systemProperties['org.gradle.integtest.buildDir'] = buildDir.absolutePath
