Added more stuff to the 'working with files' chapter

--- a/src/samples/userguide/files/file/build.gradle
+++ b/src/samples/userguide/files/file/build.gradle
@@ -1,1 +1,8 @@
-File file = file('src/config.xml')
+// Using a relative path
+File configFile = file('src/config.xml')
+
+// Using an absolute path
+configFile = file(configFile.absolutePath)
+
+// Using a File object with a relative path
+configFile = file(new File('src/config.xml'))
