--- a/src/samples/userguide/files/fileCollections/build.gradle
+++ b/src/samples/userguide/files/fileCollections/build.gradle
@@ -1,8 +1,43 @@
-def collection = files('src/file1.txt', 'src/file2.txt')
+import java.util.concurrent.Callable
 
+// START SNIPPET simple-params
+FileCollection collection = files('src/file1.txt', file('src/file2.txt'), ['src/file3.txt', 'src/file4.txt'])
+// END SNIPPET simple-params
+
+file('src').mkdirs()
+file('src/dir1').mkdirs()
+file('src/file1.txt').mkdirs()
+file('src2').mkdirs()
+file('src2/dir1').mkdirs()
+file('src2/dir2').mkdirs()
+
+// START SNIPPET closure
+task list << {
+    File srcDir
+
+    // Create a file collection using a closure
+    collection = files { srcDir.listFiles() }
+
+    // Create a file collection using a Callable
+    Callable callable = { srcDir.listFiles() } as Callable
+    collection = files(callable)
+
+    srcDir = file('src')
+    println "Contents of $srcDir.name"
+    collection.each { println relativePath(it) }
+
+    srcDir = file('src2')
+    println "Contents of $srcDir.name"
+    collection.each { println relativePath(it) }
+}
+// END SNIPPET closure
+
+collection = files('src/file1.txt')
+
+//START SNIPPET usage
 // Iterate over the files in the collection
 collection.each {File file ->
-    println file
+    file.name
 }
 
 // Convert the collection to various types
@@ -10,16 +45,10 @@ Set set = collection.files
 Set set2 = collection as Set
 List list = collection as List
 String path = collection.asPath
-
-File aFile = files('some-file') as File
+File file = collection.singleFile
+File file2 = collection as File
 
 // Add collections together
 def collection2 = collection + files('src/file3.txt')
 
-// Create collections from files, collections and closures
-File file1 = file('file1.txt')
-File file2 = file('file1.txt')
-
-def collection3 = files(file1, file2)
-def collection4 = files(['src/config.xml', file1])
-def collection5 = files { [file1, file2] }
+//END SNIPPET usage
