- Renamed JavaPluginConvention.source property to sourceSets - Renamed compile/compileTest/compile${SetName} to classes/testClasses/${setName}Classes

--- a/src/samples/groovy/customizedLayout/build.gradle
+++ b/src/samples/groovy/customizedLayout/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 }
 
 // START SNIPPET define-main
-source {
+sourceSets {
     main {
         groovy {
             srcDir 'src/groovy'
