--- a/src/samples/ivypublish/build.gradle
+++ b/src/samples/ivypublish/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 task sourceJar(type: Jar) {
     baseName = 'ivypublishSource'
-    from source.main.java
+    from sourceSets.main.java
 }
 
 artifacts {
