--- a/src/samples/java/multiproject/api/build.gradle
+++ b/src/samples/java/multiproject/api/build.gradle
@@ -31,7 +31,7 @@ compileJava.options.compilerArgs = [[value: '-Xlint:unchecked']]
 
 task spiJar(type: Jar) {
     appendix = 'spi'
-    dependsOn compile
+    dependsOn classes
     fileSet() {
         include('org/gradle/api/')
     }
