--- a/src/samples/scala/customizedLayout/build.gradle
+++ b/src/samples/scala/customizedLayout/build.gradle
@@ -14,7 +14,7 @@ dependencies {
 }
 
 // START SNIPPET define-main
-source {
+sourceSets {
     main {
         scala {
             srcDir 'src/scala'
