--- a/src/samples/userguide/tutorial/pluginConvention/build.gradle
+++ b/src/samples/userguide/tutorial/pluginConvention/build.gradle
@@ -1,8 +1,8 @@
 usePlugin 'java'
 
 task show << {
-    source.main.classesDir = new File(buildDir, 'output')
+    sourceSets.main.classesDir = new File(buildDir, 'output')
     println relativePath(processResources.destinationDir)
     println relativePath(compileJava.destinationDir)
-    println relativePath(convention.source.main.classesDir)
+    println relativePath(convention.sourceSets.main.classesDir)
 }
