- Updated the documentation of the convention mapping for each task in the java plugin, and some of the groovy plugin - Updated the 'using plugins' chapter. - Other userguide tidy-ups

--- a/src/samples/userguide/tutorial/pluginIntro/build.gradle
+++ b/src/samples/userguide/tutorial/pluginIntro/build.gradle
@@ -2,4 +2,5 @@ usePlugin 'java'
 
 task show << {
     println relativePath(compileJava.destinationDir)
+    println relativePath(processResources.destinationDir)
 }
